# the-next-step

./: .gitignore  MVP_Requirements.md  README.md  SETUP_COMPLETE.md  package-lock.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
backend/: .env.example  alembic.ini  pyproject.toml  run.py
backend/alembic/: env.py
backend/alembic/versions/: 47f5d4737325_add_user_auth_and_multi_user_support.py  c3a9a68911cd_add_archived_at_and_drop_archived_.py  f79d82ec6267_add_review_card_table.py  fa093aebfe2f_initial_schema.py
backend/app/: auth.py  config.py  main.py  models.py  schemas.py
backend/app/api/routes/: auth.py  reviews.py  suggestions.py  tasks.py  values.py
backend/app/core/: database.py
backend/app/services/: state_machine.py
backend/app/services/scoring/: __init__.py  additive_strategy.py  registry.py  service.py
backend/scripts/: create_test_user.py  get_token.sh
backend/tests/: test_auth.py  test_datetime_timezone.py  test_models.py  test_placeholder.py  test_schemas.py  test_scoring.py  test_state_machine.py  test_suggestions_api.py  test_tasks_api.py  test_transition_api.py  test_values_api.py
docs/: API.md  ARCHITECTURE.md  BRANCH_PROTECTION.md  DEVELOPMENT.md
mobile/: App.tsx  app.json  package-lock.json  package.json
scripts/: README.md  check-ci.sh
web/: .env.example  VALUES_UI_README.md  eslint.config.js  index.html  package-lock.json  package.json  vitest.config.ts
web/src/: App.test.tsx  App.tsx
web/src/api/: client.ts
web/src/components/: Icons.tsx  Layout.module.css  Layout.test.tsx  Layout.tsx  Navigation.tsx  TaskCard.test.tsx  TaskCard.tsx
web/src/pages/: EveningReview.test.tsx  EveningReview.tsx  MorningPlanning.test.tsx  MorningPlanning.tsx  TaskEntry.test.tsx  TaskEntry.tsx  TaskList.test.tsx  TaskList.tsx  ValuesPage.tsx  WhatNext.test.tsx  WhatNext.tsx
web/src/store/: useStore.ts
web/src/types/: task.ts  value.ts
web/src/utils/: errors.ts
