[project]
name = "the-next-step-api"
version = "0.1.0"
description = "FastAPI backend for The Next Step task suggestion service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.1.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "openai>=1.3.6",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    # TECHNICAL-DEBT: bcrypt is pinned to <5.0.0 for passlib 1.7.4 compatibility.
    # passlib 1.7.4 uses a deprecated bcrypt API that was removed in 5.x.
    # passlib 1.7.4 (released 2020) is no longer actively maintained.
    # RECOMMENDATION: Migrate away from passlib to a more actively maintained solution
    # such as argon2-cffi (OWASP recommended) or using bcrypt directly.
    # This constraint may become problematic as bcrypt 4.x ages and security updates
    # are only released for 5.x+. Track migration in a dedicated technical-debt issue.
    "bcrypt>=4.0.0,<5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.1",
    "ruff>=0.2.0",
    "pyright>=1.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.pyright]
reportArgumentType = "none"
reportAttributeAccessIssue = "none"
reportGeneralTypeIssues = "none"
